testing/tests/ui/char_literal.stderr
error: invalid character
 --> testing/templates/char-literals/char-literal-1.txt:1:11
       "'\\a' %}"
 --> tests/ui/char_literal.rs:4:3
  |
4 | #[template(path = "char-literals/char-literal-1.txt")]
  |   ^^^^^^^^

error: invalid character
 --> testing/templates/char-literals/char-literal-2.txt:1:11
       "'\\x' %}"
 --> tests/ui/char_literal.rs:8:3
  |
8 | #[template(path = "char-literals/char-literal-2.txt")]
  |   ^^^^^^^^

error: invalid character
 --> testing/templates/char-literals/char-literal-3.txt:1:11
       "'\\x1' %}"
  --> tests/ui/char_literal.rs:12:3
   |
12 | #[template(path = "char-literals/char-literal-3.txt")]
   |   ^^^^^^^^

error: must be a character in the range [\x00-\x7f]
 --> testing/templates/char-literals/char-literal-4.txt:1:11
       "'\\x80' %}"
  --> tests/ui/char_literal.rs:16:3
   |
16 | #[template(path = "char-literals/char-literal-4.txt")]
   |   ^^^^^^^^

error: invalid character
 --> testing/templates/char-literals/char-literal-5.txt:1:11
       "'\\u' %}"
  --> tests/ui/char_literal.rs:20:3
   |
20 | #[template(path = "char-literals/char-literal-5.txt")]
   |   ^^^^^^^^

error: invalid character
 --> testing/templates/char-literals/char-literal-6.txt:1:11
       "'\\u{}' %}"
  --> tests/ui/char_literal.rs:24:3
   |
24 | #[template(path = "char-literals/char-literal-6.txt")]
   |   ^^^^^^^^

error: unicode escape must be at most 10FFFF
 --> testing/templates/char-literals/char-literal-7.txt:1:11
       "'\\u{110000}' %}"
  --> tests/ui/char_literal.rs:28:3
   |
28 | #[template(path = "char-literals/char-literal-7.txt")]
   |   ^^^^^^^^

error: invalid character
 --> <source attribute>:1:11
       "'aaa' %}"
  --> tests/ui/char_literal.rs:32:21
   |
32 | #[template(source = "{% let s = 'aaa' %}", ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^

error: unterminated byte constant
 --> <source attribute>:1:3
       "b'c }}"
  --> tests/ui/char_literal.rs:36:21
   |
36 | #[template(source = r#"{{ b'c }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^

error: empty character literal
 --> <source attribute>:1:3
       "b'' }}"
  --> tests/ui/char_literal.rs:40:21
   |
40 | #[template(source = r#"{{ b'' }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^

error: invalid character
 --> <source attribute>:1:3
       "b'\\u{}' }}"
  --> tests/ui/char_literal.rs:44:21
   |
44 | #[template(source = r#"{{ b'\u{}' }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^

error: cannot use unicode escape in byte string in byte literal
 --> <source attribute>:1:3
       "b'\\u{0}' }}"
  --> tests/ui/char_literal.rs:48:21
   |
48 | #[template(source = r#"{{ b'\u{0}' }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^

error: cannot use unicode escape in byte string in byte literal
 --> <source attribute>:1:3
       "b'\\u{42}' }}"
  --> tests/ui/char_literal.rs:52:21
   |
52 | #[template(source = r#"{{ b'\u{42}' }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^

error: cannot use unicode escape in byte string in byte literal
 --> <source attribute>:1:3
       "b'\\u{7f}' }}"
  --> tests/ui/char_literal.rs:56:21
   |
56 | #[template(source = r#"{{ b'\u{7f}' }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^

error: cannot use unicode escape in byte string in byte literal
 --> <source attribute>:1:3
       "b'\\u{80}' }}"
  --> tests/ui/char_literal.rs:60:21
   |
60 | #[template(source = r#"{{ b'\u{80}' }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^

error: cannot use unicode escape in byte string in byte literal
 --> <source attribute>:1:3
       "b'\\u{1234}' }}"
  --> tests/ui/char_literal.rs:64:21
   |
64 | #[template(source = r#"{{ b'\u{1234}' }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^

error: cannot use unicode escape in byte string in byte literal
 --> <source attribute>:1:3
       "b'\\u{10ffff}' }}"
  --> tests/ui/char_literal.rs:68:21
   |
68 | #[template(source = r#"{{ b'\u{10ffff}' }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^

error: unterminated byte constant
 --> <source attribute>:1:6
       "b'c) }}"
  --> tests/ui/char_literal.rs:72:21
   |
72 | #[template(source = r#"{{ a!(b'c) }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^

error: empty character literal
 --> <source attribute>:1:3
       "b'' }}"
  --> tests/ui/char_literal.rs:76:21
   |
76 | #[template(source = r#"{{ b'' }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^

error: invalid character
 --> <source attribute>:1:3
       "b'\\u{}' }}"
  --> tests/ui/char_literal.rs:80:21
   |
80 | #[template(source = r#"{{ b'\u{}' }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^

error: cannot use unicode escape in byte string in byte literal
 --> <source attribute>:1:6
       "b'\\u{0}') }}"
  --> tests/ui/char_literal.rs:84:21
   |
84 | #[template(source = r#"{{ a!(b'\u{0}') }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^

error: cannot use unicode escape in byte string in byte literal
 --> <source attribute>:1:6
       "b'\\u{42}') }}"
  --> tests/ui/char_literal.rs:88:21
   |
88 | #[template(source = r#"{{ a!(b'\u{42}') }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot use unicode escape in byte string in byte literal
 --> <source attribute>:1:6
       "b'\\u{7f}') }}"
  --> tests/ui/char_literal.rs:92:21
   |
92 | #[template(source = r#"{{ a!(b'\u{7f}') }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot use unicode escape in byte string in byte literal
 --> <source attribute>:1:6
       "b'\\u{80}') }}"
  --> tests/ui/char_literal.rs:96:21
   |
96 | #[template(source = r#"{{ a!(b'\u{80}') }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot use unicode escape in byte string in byte literal
 --> <source attribute>:1:6
       "b'\\u{1234}') }}"
   --> tests/ui/char_literal.rs:100:21
    |
100 | #[template(source = r#"{{ a!(b'\u{1234}') }}"#, ext = "html")]
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot use unicode escape in byte string in byte literal
 --> <source attribute>:1:6
       "b'\\u{10ffff}') }}"
   --> tests/ui/char_literal.rs:104:21
    |
104 | #[template(source = r#"{{ a!(b'\u{10ffff}') }}"#, ext = "html")]
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
